# unified-memory-server

./: .env.example  .gitignore  CONTAINER_ARCHITECTURE_ANALYSIS.md  Dockerfile.api  Dockerfile.mcp  Dockerfile.worker  NEO4J_IMPLEMENTATION_SUMMARY.md  README.md  ai_directives_demo.py  docker-compose.enhanced.yml  docker-compose.prod.yml  example_automated_router.py  index.html  performance_results.json  pyproject.toml  test_config.py  test_error_handling.py  test_fallback_success.py  test_format_cypher_query.py  test_neo4j_backend.py  test_requirements.py  unified-memory-server.postman_collection.json
docs/: ENHANCED_TASK_DETERMINATION.md  IMPLEMENTATION_AND_ACCURACY_PLAN.md  ai-directives-integration.md  api.md  automated-memory-router.md  client-config.md  deployment.md  mcp-proxy.md  memory-selection.md  postman_collection_generator.py  security.md
public/: README.md  index.html  progress-data.json
scripts/: README.md  generate_progress_data.py
src/: ai_directives_integration.py  automated_memory_router.py  cab_tracker.py  main.py  mcp_server.py  mcp_tool_router.py  memory_selector.py  startup_sequence.py
tests/: __init__.py  test_ai_directives.py  test_ai_directives_demo.py  test_ai_directives_integration.py  test_api.py  test_automated_memory_router.py  test_basic_functionality.py  test_cab_integration.py  test_check_connectivity_function.py  test_client_variable_usage.py  test_constructor_fix.py  test_intent_analyzer.py  test_mcp_server.py  test_mcp_tool_router.py  test_memory_selector_config.py  test_memory_selector_propagation.py  test_performance.py  (+3 more)
(+16 files in other folders)
